--- a/west.html
+++ b/west.html
@@ -13,7 +13,7 @@
         <div id="flex">
             <nav>
                 <ul>
-                    <li><a href="Index.html">Кинология</a></li>
+                    <li><a href="index.html">Кинология</a></li>
                     <li><a href="malinua.html">Бельгийская овчарка</a></li>
                     <li><a href="chih.html">Чихуахуа</a></li>
                 </ul>
